CustomObjects/objects/invoiceit_s__Stock_Item__c.object
<CustomObject>
    <fields>
        <fullName>invoiceit_s__Available_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Available Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Bar_Code__c</fullName>
        <inlineHelpText>Bar Code number</inlineHelpText>
        <label>Bar Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Dispatched_Quantity__c</fullName>
        <label>Dispatched Quantity</label>
        <summarizedField>invoiceit_s__Dispatched_Item__c.invoiceit_s__Quantity__c</summarizedField>
        <summaryForeignKey>invoiceit_s__Dispatched_Item__c.invoiceit_s__Stock_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Product__c</fullName>
        <label>Invoice IT Product</label>
        <referenceTo>invoiceit_s__Product__c</referenceTo>
        <relationshipLabel>Stock Items</relationshipLabel>
        <relationshipName>Stock_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Received_Quantity__c</fullName>
        <label>Received Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Stock_Entry_Date__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Stock Entry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Stock_Reference__c</fullName>
        <externalId>true</externalId>
        <label>Stock Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Stock Item</label>
    <listViews>
        <fullName>invoiceit_s__All</fullName>
        <columns>NAME</columns>
        <columns>invoiceit_s__Product__c</columns>
        <columns>invoiceit_s__Available_Quantity__c</columns>
        <columns>invoiceit_s__Dispatched_Quantity__c</columns>
        <columns>invoiceit_s__Stock_Entry_Date__c</columns>
        <columns>invoiceit_s__Bar_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SI-{000000}</displayFormat>
        <label>Stock Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>